NIFI-15304 Removed unsupported Socket Keep Alive from ListenSyslog
- Removed the SO_KEEPALIVE channel option from the Netty Event Server Factory as it is not supported in the NioServerSocketChannel

Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>

This closes #10612.